name:                haxbase
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/metaleap/haxbase#readme
license:             GPL
license-file:        LICENSE
author:              metaleap
maintainer:          metaleap@mailbox.org
copyright:           2017 Phil Schumann
category:            Misc
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Hax.Base
  default-language:    Haskell2010
  build-depends:
    base
