name:                haxbase
version:             1.0.0.3
homepage:            https://github.com/metaleap/haxbase#readme
license:             GPL
license-file:        LICENSE
author:              metaleap
maintainer:          metaleap@mailbox.org
copyright:           Phil Schumann
category:            Misc
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    default-language:    Haskell2010
    ghc-options:         -j4 -Wall -O2
    hs-source-dirs:      src
    build-depends:
        base, containers, filepath, text
    exposed-modules:
        Base, Cfg, Dbg, Fn, Lst, Map, Str, Txt
